# Hazard-Forge

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
engine/: CMakeLists.txt
engine/ai/: ai.h
engine/anim/: animation.cpp  animation.h  ik.h  skeleton.h  state_machine.cpp  state_machine.h
engine/asset/: asset_compiler.h  asset_hotreload_live.h  draco_decode.h  env_loader.cpp  env_loader.h  fbx_loader.h  gltf_compile.h  gltf_ext.h  gltf_loader.cpp  gltf_loader.h  obj_loader.h  usd_loader.h
engine/audio/: dsp.h  mixer.cpp  mixer.h  wav.cpp  wav.h
engine/debug/: debug_draw.cpp  debug_draw.h  debug_emitters.cpp  debug_emitters.h
engine/econ/: econ.h  econ_render.h
engine/ecs/: ecs.h
engine/editor/: CMakeLists.txt  edit_ops.cpp  edit_ops.h  editor_panel_data.cpp  editor_panel_data.h  editor_panels.cpp  editor_panels.h  flow_edit_ops.h  flow_editor_data.h  flow_editor_panels.cpp  flow_editor_panels.h  gizmo.cpp  gizmo.h  hf_imconfig.h  imgui_renderer.cpp  imgui_renderer.h  introspect.cpp  introspect.h  picking.cpp  picking.h  profiler_view_data.h  profiler_view_panels.cpp  profiler_view_panels.h  seq_edit_ops.h  seq_editor_data.h  seq_editor_panels.cpp  seq_editor_panels.h  widget_edit_ops.h  widget_editor_data.h  widget_editor_panels.cpp  widget_editor_panels.h
engine/flow/: flow.h
engine/foliage/: foliage.h
engine/game/: roll_game.cpp  roll_game.h  verdict.h
engine/hal/: window.cpp  window.h
engine/material/: codegen.cpp  codegen.h  graph_introspect.cpp  graph_introspect.h  live_material.cpp  live_material.h  material_loader.cpp  material_loader.h  runtime_compile.cpp  runtime_compile.h  shader_graph.cpp  shader_graph.h
engine/math/: math.h
engine/nav/: navmesh.h
engine/net/: prediction.cpp  prediction.h  session.h  snapshot.cpp  snapshot.h  transport.cpp  transport.h
engine/pcg/: pcg.h
engine/physics/: body.h  world.cpp  world.h
engine/platform/: crash_dialogs.h
engine/profile/: profile.h  profile_live.h
engine/render/: auto_exposure.h  bindless.h  cas.h  clouds.h  cluster.h  cluster_cull.h  cluster_lod.h  clustered.h  color_grade.h  contact_shadows.h  csm.h  cubemap.h  decal.h  dof.h  froxel.h  frustum.h  gi.h  gpu_cull.h  gpu_culled.h  gpu_driven.h  gtao.h  hiz.h  lod_gen.h  manylight.h  mc.h  mdi.h  meshlet.h  motion_blur.h  oit.h  planar_reflection.h  point_shadow.h  pom.h  post_stack.cpp  post_stack.h  probe.h  probe_capture.h  probe_dist.h  probe_gi.h  probe_multibounce.h  probe_sh.h  (+16 more)
engine/replay/: replay.h
engine/rhi/: rhi.h  rhi_factory.cpp  rhi_factory.h
engine/rhi_metal/: metal_accel.h  metal_accel.mm  metal_buffer.h  metal_buffer.mm  metal_command_buffer.h  metal_command_buffer.mm  metal_common.h  metal_compute_pipeline.h  metal_compute_pipeline.mm  metal_cubemap_target.h  metal_cubemap_target.mm  metal_device.h  metal_device.mm  metal_device_windowed.mm  metal_offscreen.h  metal_pipeline.h  metal_pipeline.mm  metal_render_target.h  metal_render_target.mm  metal_sampled.h  metal_shader.h  metal_shader.mm  metal_shader_load.h  metal_shader_load.mm  metal_swapchain.h  metal_swapchain.mm  metal_texture.h  metal_texture.mm  metal_windowed.h
engine/rhi_vulkan/: vk_common.h  vulkan_accel.cpp  vulkan_accel.h  vulkan_bindless.cpp  vulkan_bindless.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_compute_pipeline.cpp  vulkan_compute_pipeline.h  vulkan_cubemap_target.cpp  vulkan_cubemap_target.h  vulkan_device.cpp  vulkan_device.h  vulkan_pbr_material.cpp  vulkan_pbr_material.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_target.cpp  vulkan_render_target.h  vulkan_sampled.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h
engine/runtime/: camera.cpp  camera.h  clock.cpp  clock.h  fly_camera_controller.cpp  fly_camera_controller.h  hot_reload.cpp  hot_reload.h  input_state.h  parallel_record.cpp  parallel_record.h  play_state.h
engine/scene/: commands.cpp  commands.h  components.h  instance_grid.h  mesh.cpp  mesh.h  renderable.h  scene_io.cpp  scene_io.h  streaming.cpp  streaming.h  transform.h  vertex.h
engine/seq/: seq.h  seq_render.h
engine/sim/: active.h  boids.h  broad.h  ccd.h  cloth.h  convex.h  couple.h  couple_cf.h  couple_gf.h  couple_grain.h  fluid.h  fpx.h  fract.h  fric.h  gjk.h  grain.h  hair.h  hullfric.h  hulljoint.h  joint.h  manifold.h  particles.h  persist.h  softbody.h  vehicle.h  warmhull.h
engine/terrain/: erosion.h  heightmap.cpp  heightmap.h  procterrain.h  terrain_stream.cpp  terrain_stream.h
engine/ui/: text.cpp  text.h  widget.h  widget_render.h
engine/vfx/: particles.cpp  particles.h
engine/weather/: weather.h
engine/wfc/: wfc.h  wfc_render.h
engine/world/: chunk_diff.h
mac_window/: CMakeLists.txt  main.mm
metal_headless/: .gitignore  CMakeLists.txt  visual_test.mm
samples/hello_triangle/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  active_test.cpp  agent_author_test.cpp  agent_query_test.cpp  agent_replay_test.cpp  agent_stress_test.cpp  ai_agent_test.cpp  ai_lockstep_test.cpp  ai_los_test.cpp  ai_query_test.cpp  ai_render_test.cpp  ai_tree_test.cpp  anim_fsm_test.cpp  anim_test.cpp  asset_compiler_test.cpp  asset_gltf_compile_test.cpp  asset_hotreload_live_test.cpp  audio_test.cpp  auto_exposure_test.cpp  bindless_test.cpp  boids_test.cpp  broad_test.cpp  cas_test.cpp  ccd_test.cpp  cfl_test.cpp  cgf_test.cpp  cgrain_test.cpp  chunk_diff_test.cpp  cloth_test.cpp  cloud_shadows_test.cpp  clouds_test.cpp  cluster_cull_test.cpp  cluster_hiz_test.cpp  cluster_lod_test.cpp  cluster_test.cpp  clustered_test.cpp  color_grade_test.cpp  commands_test.cpp  contact_shadows_test.cpp  convex_test.cpp  (+148 more)
tests/golden/agent/: authored_scene.json  canonical.replay  query_responses.json  reload_trace.json  stress_report.json
tests/golden/introspect/: agent_api.json  default_scene.json
tests/golden/material/: showcase3_graph.json
tests/golden/metal/: README.md
tools/material_codegen/: CMakeLists.txt  main.cpp
(+749 files in other folders)
